--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   rust_lib_delulu:
     path: rust_builder
   flutter_rust_bridge: 2.0.0-dev.33
+  share_plus: ^9.0.0
+  flutter_chat_ui: ^1.6.12
+  flutter_chat_types: ^3.6.2
+  image_picker: ^1.1.1
+  file_picker: ^8.0.3
+  open_filex: ^4.4.0
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   integration_test:
     sdk: flutter
 
@@ -79,12 +86,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: PixelifySans
+      fonts:
+        - asset: assets/PixelifySans.ttf
+
+    - family: Teachers
+      fonts:
+        - asset: assets/Teachers.ttf
+        - asset: assets/Teachers-Italic.ttf
+          style: italic
+
+    - family: RedditSans
+      fonts:
+        - asset: assets/RedditSans.ttf
+        - asset: assets/RedditSans-Italic.ttf
+          style: italic
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
