--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   file_picker: ^8.0.3
   open_filex: ^4.4.0
   mime: ^1.0.5
+  cached_network_image: ^3.3.1
+  equatable: ^2.0.5
+  skeletonizer: ^1.1.2+1
 
 dev_dependencies:
   flutter_test:
