--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   open_filex: ^4.4.0
   mime: ^1.0.5
   cached_network_image: ^3.3.1
-  equatable: ^2.0.5
   skeletonizer: ^1.1.2+1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
